Removed Water & Energy Cost options/graphs from all widgets.

--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -21,7 +21,7 @@
                     <option value="daily_capita" {% if action == "daily_capita" %}selected{% endif %}>{% trans "Daily Per Capita" %}</option>
                     <option value="monthly" {% if action == "monthly" %}selected{% endif %}>{% trans "Monthly" %}</option>
                     <option value="monthly_capita" {% if action == "monthly_capita" %}selected{% endif %}>{% trans "Monthly Per Capita" %}</option>
-                    <option value="monthly_cost" {% if action == "monthly_cost" %}selected{% endif %}>{% trans "Monthly Cost" %}</option>
+{#                    <option value="monthly_cost" {% if action == "monthly_cost" %}selected{% endif %}>{% trans "Monthly Cost" %}</option>#}
                 </select>
             </div>
             <div class="col-md-3">
