minor bug fixes.

--- a/unexe/templates/households.html
+++ b/unexe/templates/households.html
@@ -542,7 +542,7 @@
 				    </select>
 			   		</div>
 			  		<div class="col-md-2">
-				    <label>{% trans "Sink (Kitchen and WC)" %} 65</label>
+				    <label>{% trans "Sink (Kitchen and WC)" %}</label>
 				    <select class="form-control numddl" name="appl_sink">
 				    	<option value="0">{% trans "Please Select" %}</option>
 						{% for i in list_100 %}
