--- a/unexe/templates/base.html
+++ b/unexe/templates/base.html
@@ -165,10 +165,10 @@ $(window).load(function() {
     		<form action="/i18n/setlang/" method="post" class="form-inline">
       			{% csrf_token %}
       			<input name="next" type="hidden" value="/dashboard" />
-      			<select name="language" class="form-control" onchange="this.form.submit()" disabled>
-        		{% for lang in LANGUAGES %}
-          			<option value="{{ lang.0 }}">{{ lang.1 }}</option>
-        		{% endfor %}
+      			<select name="language" class="form-control" onchange="this.form.submit()">
+                    {% for lang in LANGUAGES %}
+                        <option value="{{ lang.0 }}" {% if request.LANGUAGE_CODE == lang.0 %} selected {% endif %}>{{ lang.1 }}</option>
+                    {% endfor %}
       			</select>
       		
 		{% if user.is_authenticated %}	
