minor changes to 2.1 and 2.3

--- a/uc_02_1/templates/_inner_02_1.html
+++ b/uc_02_1/templates/_inner_02_1.html
@@ -48,8 +48,8 @@
 
 <script>
     var pie_data = [
-        { label: '{% trans "Energy Related" %}', data: {{ energy }}, color: "#4B966C" },
-        { label: '{% trans "Rest Uses" %}', data: {{ rest }}, color: "#893C4E" }
+        { label: '{% trans "Water Related" %}', data: {{ energy }}, color: "#4B966C" },
+        { label: '{% trans "Pure Energy Uses" %}', data: {{ rest }}, color: "#893C4E" }
     ];
 
     var pie_chart = $("#pie_uc21");
