--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -63,7 +63,7 @@
                     <input type="radio" id="period_d" checked="checked" name="period_d" value="7days" onclick="hideCalendars()"/>{% trans " Last 7 Days" %}
                 </label>
                 <label>
-                    <input type="radio" id="period_d" name="period_d" value="month" onclick="hideCalendars()"  />{% trans "Last Month Days" %}
+                    <input type="radio" id="period_d" name="period_d" value="month" onclick="hideCalendars()"  />{% trans "Current Month" %}
                 </label>
                 <label>
                     <input type="radio" id="period_d" name="period_d" value="custom1" onclick="showCalendar1();" />{% trans "Specify Period" %}
