--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -28,33 +28,33 @@ function uc32Chart(data)
 	values    = data["yourdata"]["half"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc32half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc32half").html("<strong>{% trans "Over 6 Months Period" %}:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["yourdata"]["year"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc32yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc32yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	//area data
 	values    = data["areadata"]["month"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc32Month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc32Month").html("<strong>{% trans "Over 1 Months Period" %}:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["areadata"]["quarter"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc32Quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc32Quarter").html("<strong>{% trans "Over 3 Months Period" %}:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["areadata"]["half"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc32Half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc32Half").html("<strong>{% trans "Over 6 Months Period" %}:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 	
 	values    = data["areadata"]["year"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc32Yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc32Yearly").html("<strong>{% trans "Over 12 Months Period" %}:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 	/*
 	data = jQuery.parseJSON("{{uc32chart2|escapejs}}");
 	w = domutil.getdivwidth("dmachart2"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
@@ -200,48 +200,48 @@ function c_uc32disabled()
 	 <div class="row">
 	 	<div class="form-inline col-md-6 hide" id="c_uc32_season">
 			<select id="c_uc32_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
+			<option value="summer">{% trans "Summer" %}</option>
+			<option value="winter">{% trans "Winter" %}</option>
+			<option value="autumn">{% trans "Autumn" %}</option>
+			<option value="spring">{% trans "Spring" %}</option>
 			</select>
 			<select id="c_uc32_seasonyear" class="form-control" required="true"></select>	 				 	
 	 	</div>		 
 		<div class="form-inline col-md-6 hide" id="c_uc32_daterange">
 		 	<div class="form-group">
 			<select id="c_uc32stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+			<option value="1">{% trans "January" %}</option>
+			<option value="2">{% trans "February" %}</option>
+			<option value="3">{% trans "March" %}</option>
+			<option value="4">{% trans "April" %}</option>
+			<option value="5">{% trans "May" %}</option>
+			<option value="6">{% trans "June" %}</option>
+			<option value="7">{% trans "July" %}</option>
+			<option value="8">{% trans "August" %}</option>
+			<option value="9">{% trans "September" %}</option>
+			<option value="10">{% trans "October" %}</option>
+			<option value="11">{% trans "November" %}</option>
+			<option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
 			<select id="c_uc32styear" class="form-control" required="true"></select>			
 			</div>
-			TO
+			{% trans "TO" %}
 		 	<div class="form-group">
 			<select id="c_uc32endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
@@ -286,7 +286,7 @@ function c_uc32disabled()
 		</div>
 			
 		<div class="row hide" id="c_uc32container">
-			<div id="c_uc32title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>	
+			<div id="c_uc32title"><p class="bg-primary text-center"><strong>{% trans "Your last 12 Months bill comparison vs other consumers" %}</strong></p></div>
 			<div class="col-md-7" id="c_uc32chart"></div>
 			<div class="col-md-5" id="c_uc32summary">
 			    <div class="panel panel-primary">
