--- a/unexe/templates/usecase/c_uc3.3.html
+++ b/unexe/templates/usecase/c_uc3.3.html
@@ -17,43 +17,43 @@ function uc33Chart(data)
 	var values= data["yourdata"]["month"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc33month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc33month").html("<strong>{% trans "Over 1 Months Period" %}:</strong><br/><div class='text-primary'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["yourdata"]["quarter"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc33quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc33quarter").html("<strong>{% trans "Over 3 Months Period" %}:</strong><br/><div class='text-primary'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["yourdata"]["half"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc33half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc33half").html("<strong>{% trans "Over 6 Months Period" %}:</strong><br/><div class='text-primary'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["yourdata"]["year"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc33yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc33yearly").html("<strong>{% trans "Over 12 Months Period" %}:</strong><br/><div class='text-primary'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	//area data
 	values    = data["areadata"]["month"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc33Month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc33Month").html("<strong>{% trans "Over 1 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Average consumption per household" %}: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["areadata"]["quarter"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc33Quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc33Quarter").html("<strong>{% trans "Over 3 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Average consumption per household" %}: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["areadata"]["half"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc33Half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc33Half").html("<strong>{% trans "Over 6 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Average consumption per household" %}: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 	
 	values    = data["areadata"]["year"];
 	occupant  = values["occupant"];
 	household = values["avg_units"];	
-	$("#c_uc33Yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc33Yearly").html("<strong>{% trans "Over 12 Months Period" %}:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), {% trans "Average consumption per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 	/*
 	data = jQuery.parseJSON("{{uc32chart2|escapejs}}");
 	w = domutil.getdivwidth("dmachart2"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
@@ -169,19 +169,19 @@ function c_uc33toggle()
 		<select id="c_uc33year" class="form-control" required="true"></select>
 		-->
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="season" onchange="c_uc33toggle();" /> Select Season
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="season" onchange="c_uc33toggle();" /> {% trans "Select Season" %}
 		</label>		
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="days"  onchange="c_uc33toggle();" /> Specify Period
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="days"  onchange="c_uc33toggle();" /> {% trans "Specify Period" %}
 		</label>
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="3" onclick="c_uc33toggle();"/> Last 3 Months
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="3" onclick="c_uc33toggle();"/> {% trans "Last 3 Months" %}
 		</label>
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="6" onclick="c_uc33toggle();"/> Last 6 Months
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="6" onclick="c_uc33toggle();"/> {% trans "Last 6 Months" %}
 		</label>		
 		<label class="radio inline c_uc33period">
-			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="12" onclick="c_uc33toggle();"/> Last 12 Months
+			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="12" onclick="c_uc33toggle();"/> {% trans "Last 12 Months" %}
 		</label>	
 		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc33-form');">{% trans "Compare" %}</button>
 		</form>     
@@ -191,28 +191,28 @@ function c_uc33toggle()
 	 <div class="row" id="_uc33_daterange">
 	 	<div class="form-inline col-md-6 hide" id="c_uc33_season">
 			<select id="c_uc33_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
+			<option value="summer">{% trans "Summer" %}</option>
+			<option value="winter">{% trans "Winter" %}</option>
+			<option value="autumn">{% trans "Autumn" %}</option>
+			<option value="spring">{% trans "Spring" %}</option>
 			</select>
 			<select id="c_uc33_seasonyear" class="form-control" required="true"></select>	 				 	
 	 	</div>	 
 		<div class="form-inline col-md-6 hide" id="c_uc33_daterange">
 		 	<div class="form-group">
 			<select id="c_uc33stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
@@ -220,21 +220,21 @@ function c_uc33toggle()
 
 			</select>			
 			</div>
-			TO
+			{% trans "TO" %}
 		 	<div class="form-group">
 			<select id="c_uc33endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
@@ -279,7 +279,7 @@ function c_uc33toggle()
 		</div>
 			
 		<div class="row hide" id="c_uc33container">
-			<div id="c_uc33title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>
+			<div id="c_uc33title"><p class="bg-primary text-center"><strong>{% trans "Your last 12 Months bill comparison vs other consumers" %}</strong></p></div>
 			<div class="col-md-7" id="c_uc33chart"></div>
 			<div class="col-md-5" id="c_uc33summary">
 			    <div class="panel panel-primary">
