--- a/unexe/templates/usecase/c_uc3.4.html
+++ b/unexe/templates/usecase/c_uc3.4.html
@@ -28,32 +28,32 @@ function uc34Chart(data)
 	values    = data["yourdata"]["half"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc34half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
+	$("#c_uc34half").html("<strong>{% trans "Over 6 Months Period" %}:</strong><br/><div class='text-primary'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values    = data["yourdata"]["year"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc34yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc34yearly").html("<strong>{% trans "Over 12 Months Period" %}:</strong><br/><div class='text-primary'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values= data["effdata"]["1 Month"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc34Month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc34Month").html("<strong>{% trans "Over 1 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values= data["effdata"]["3 Month"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];
-	$("#c_uc34Quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc34Quarter").html("<strong>{% trans "Over 3 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 
 	values= data["effdata"]["6 Month"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];	
-	$("#c_uc34Half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
+	$("#c_uc34Half").html("<strong>{% trans "Over 6 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 	
 	values= data["effdata"]["12 Month"];
 	household = values["sum_units"];
 	occupant  = values["unit_person"];	
-	$("#c_uc34Yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-muted'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");		
+	$("#c_uc34Yearly").html("<strong>{% trans "Over 12 Months Period" %}:</strong><br/><div class='text-muted'>{% trans "Units consumed for household" %}: "+household+" (m<sup>3</sup>), {% trans "Units consumed per occupant" %}: "+occupant+" (m<sup>3</sup>)</div>");
 }
 
 $(window).load(function() {
@@ -128,19 +128,19 @@ function c_uc34toggle()
 		<select id="c_uc34year" class="form-control" required="true"></select>
 		-->
 		<label class="radio inline c_uc34period">
-			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="season" onchange="c_uc34toggle();" /> Select Season
+			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="season" onchange="c_uc34toggle();" /> {% trans "Select Season" %}
 		</label>		
 		<label class="radio inline c_uc34period">
-			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="days"  onchange="c_uc34toggle();" /> Specify Period
+			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="days"  onchange="c_uc34toggle();" /> {% trans "Specify Period" %}
 		</label>
 		<label class="radio inline c_uc34period">
-			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="3" onclick="c_uc34toggle();"/> Last 3 Months
+			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="3" onclick="c_uc34toggle();"/> {% trans "Last 3 Months" %}
 		</label>
 		<label class="radio inline c_uc34period">
-			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="6" onclick="c_uc34toggle();"/> Last 6 Months
+			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="6" onclick="c_uc34toggle();"/> {% trans "Last 6 Months" %}
 		</label>		
 		<label class="radio inline c_uc34period">
-			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="12" onclick="c_uc34toggle();"/> Last 12 Months
+			<input type="radio" name="c_uc34_per" id="c_uc34_per" value="12" onclick="c_uc34toggle();"/> {% trans "Last 12 Months" %}
 		</label>	
 		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc34-form');">{% trans "Compare" %}</button>
 		</form>     
@@ -150,28 +150,28 @@ function c_uc34toggle()
 	 <div class="row" id="_uc34_daterange">
 	 	<div class="form-inline col-md-6 hide" id="c_uc34_season">
 			<select id="c_uc34_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
-			</select>
+                <option value="summer">{% trans "Summer" %}</option>
+                <option value="winter">{% trans "Winter" %}</option>
+                <option value="autumn">{% trans "Autumn" %}</option>
+                <option value="spring">{% trans "Spring" %}</option>
+            </select>
 			<select id="c_uc34_seasonyear" class="form-control" required="true"></select>	 				 	
 	 	</div>	 
 		<div class="form-inline col-md-6 hide" id="c_uc34_daterange">
 		 	<div class="form-group">
 			<select id="c_uc34stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
@@ -179,21 +179,21 @@ function c_uc34toggle()
 
 			</select>			
 			</div>
-			TO
+			{% trans "TO" %}
 		 	<div class="form-group">
 			<select id="c_uc34endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
