--- a/unexe/templates/usecase/c_uc5.2.html
+++ b/unexe/templates/usecase/c_uc5.2.html
@@ -121,19 +121,19 @@ function c_uc52toggle()
 		</select>
 		 -->
 		<label class="radio inline">
-			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="season" onchange="c_uc52toggle();" /> Select Season
+			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="season" onchange="c_uc52toggle();" /> {% trans "Select Season" %}
 		</label>		 
 		<label class="radio inline">
-			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="days" checked="checked" onchange="c_uc52toggle();" /> Specify Period
+			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="days" checked="checked" onchange="c_uc52toggle();" /> {% trans "Specify Period" %}
 		</label>
 		<label class="radio inline">
-			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="3" onchange="c_uc52toggle();"/> 3 Months
+			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="3" onchange="c_uc52toggle();"/> {% trans "3 Months" %}
 		</label>
 		<label class="radio inline">
-			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="6" onchange="c_uc52toggle();"/> 6 Months
+			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="6" onchange="c_uc52toggle();"/> {% trans "6 Months" %}
 		</label>		
 		<label class="radio inline">
-			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="12" onchange="c_uc52toggle();"/> 12 Months
+			<input type="radio" name="c_uc52_per" id="c_uc52_per" value="12" onchange="c_uc52toggle();"/> {% trans "12 Months" %}
 		</label>	
 		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc52-form');">{% trans "Analyse" %}</button>
 		</form>     
@@ -143,11 +143,11 @@ function c_uc52toggle()
 	 <div class="row" id="_uc52_daterange">
 	 	<div class="form-inline col-md-6 hide" id="c_uc52_season">
 			<select id="c_uc52_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
-			</select>
+                <option value="summer">{% trans "Summer" %}</option>
+                <option value="winter">{% trans "Winter" %}</option>
+                <option value="autumn">{% trans "Autumn" %}</option>
+                <option value="spring">{% trans "Spring" %}</option>
+            </select>
 			
 			<select id="c_uc52_seasonyear" class="form-control" required="true">
 			</select>	 				 	
@@ -155,38 +155,38 @@ function c_uc52toggle()
 		 <div class="form-inline col-md-6" id="c_uc52_daterange">
 		 	<div class="form-group">
 			<select id="stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
 			<select id="styear" class="form-control" required="true"></select>			
 			</div>
-			TO
+			{% trans "TO" %}
 		 	<div class="form-group">
 			<select id="endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
