--- a/unexe/templates/usecase/c_uc5.4.html
+++ b/unexe/templates/usecase/c_uc5.4.html
@@ -32,19 +32,19 @@
 		<select id="c_uc54year" class="form-control" required="true"></select>
 		-->
 		<label class="radio inline c_uc54period">
-			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="season" onchange="c_uc54toggle();" /> Select Season
+			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="season" onchange="c_uc54toggle();" /> {% trans "Select Season" %}
 		</label>		
 		<label class="radio inline c_uc54period">
-			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="days"  onchange="c_uc54toggle();" /> Specify Period
+			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="days"  onchange="c_uc54toggle();" /> {% trans "Specify Period" %}
 		</label>
 		<label class="radio inline c_uc54period">
-			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="3" onclick="c_uc54toggle();"/> Last 3 Months
+			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="3" onclick="c_uc54toggle();"/> {% trans "Last 3 Months" %}
 		</label>
 		<label class="radio inline c_uc54period">
-			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="6" onclick="c_uc54toggle();"/> Last 6 Months
+			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="6" onclick="c_uc54toggle();"/> {% trans "Last 6 Months" %}
 		</label>		
 		<label class="radio inline c_uc54period">
-			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="12" onclick="c_uc54toggle();"/> Last 12 Months
+			<input type="radio" name="c_uc54_per" id="c_uc54_per" value="12" onclick="c_uc54toggle();"/> {% trans "Last 12 Months" %}
 		</label>	
 		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc54-form');">{% trans "Compare" %}</button>
 		</form>     
@@ -54,28 +54,28 @@
 	 <div class="row" id="_uc54_daterange">
 	 	<div class="form-inline col-md-6 hide" id="c_uc54_season">
 			<select id="c_uc54_seasons" class="form-control" required="true">
-			<option value="summer">Summer</option>
-			<option value="winter">Winter</option>
-			<option value="autumn">Autumn</option>
-			<option value="spring">Spring</option>			
-			</select>
+                <option value="summer">{% trans "Summer" %}</option>
+                <option value="winter">{% trans "Winter" %}</option>
+                <option value="autumn">{% trans "Autumn" %}</option>
+                <option value="spring">{% trans "Spring" %}</option>
+            </select>
 			<select id="c_uc54_seasonyear" class="form-control" required="true"></select>	 				 	
 	 	</div>	 
 		<div class="form-inline col-md-6 hide" id="c_uc54_daterange">
 		 	<div class="form-group">
 			<select id="c_uc54stmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>
 			<div class="form-group">
@@ -86,18 +86,18 @@
 			TO
 		 	<div class="form-group">
 			<select id="c_uc54endmonth" class="form-control" required="true">
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
+                <option value="1">{% trans "January" %}</option>
+                <option value="2">{% trans "February" %}</option>
+                <option value="3">{% trans "March" %}</option>
+                <option value="4">{% trans "April" %}</option>
+                <option value="5">{% trans "May" %}</option>
+                <option value="6">{% trans "June" %}</option>
+                <option value="7">{% trans "July" %}</option>
+                <option value="8">{% trans "August" %}</option>
+                <option value="9">{% trans "September" %}</option>
+                <option value="10">{% trans "October" %}</option>
+                <option value="11">{% trans "November" %}</option>
+                <option value="12">{% trans "December" %}</option>
 			</select>
 			</div>		
 		 	<div class="form-group">
@@ -142,7 +142,7 @@
 		</div>
 			
 		<div class="row hide" id="c_uc54container">
-			<div id="c_uc54title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>	
+			<div id="c_uc54title"><p class="bg-primary text-center"><strong>{% trans "Your last 12 Months bill comparison vs other consumers" %}</strong></p></div>
 			<div class="col-md-7" id="c_uc54chart"></div>
 			<div class="col-md-5" id="c_uc54summary">
 			    <div class="panel panel-primary">
