added some translations

--- a/unexe/templates/sidebar.html
+++ b/unexe/templates/sidebar.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading"><small><a href="2" onclick="household($(this).attr('href')); return false;" class="pull-right">Update</a></small> <div class="panel-title">{% trans "HOUSEHOLD" %}</div></div>
+            <div class="panel-heading"><small><a href="2" onclick="household($(this).attr('href')); return false;" class="pull-right">{% trans "Update" %}</a></small> <div class="panel-title">{% trans "HOUSEHOLD" %}</div></div>
             <div class="panel-body">
                 <!--
                         <form class="form-inline">
