minor fixes. Added script to export latest dates of import

--- a/uc_02_3/templates/_inner_02_3.html
+++ b/uc_02_3/templates/_inner_02_3.html
@@ -21,7 +21,7 @@
         <tbody>
         <tr>
             <td>
-                <strong>{% trans "Energy to heat water" %}</strong>
+                <strong>{% trans "Water-Energy related carbon emissions" %}</strong>
             </td>
             <td>
                 {{ energy }} kWh
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <td>
-                <strong>{% trans "Rest uses" %}</strong>
+                <strong>{% trans "Pure energy related carbon emissions" %}</strong>
             </td>
             <td>
                 {{ rest }} kWh
