--- a/uc_02_1/templates/_inner_02_1.html
+++ b/uc_02_1/templates/_inner_02_1.html
@@ -20,7 +20,7 @@
         <tbody>
             <tr>
                 <td>
-                    <strong>{% trans "Energy to heat water" %}</strong>
+                    <strong>{% trans "Water Related" %}</strong>
                 </td>
                 <td>
                     {{ energy }} kWh
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td>
-                    <strong>{% trans "Rest uses" %}</strong>
+                    <strong>{% trans "Pure Energy Uses" %}</strong>
                 </td>
                 <td>
                     {{ rest }} kWh
