Update links on sidebar now work.

--- a/unexe/templates/base.html
+++ b/unexe/templates/base.html
@@ -94,6 +94,9 @@
 
 <script type="text/javascript">
 
+function activateTab(href){
+     $('#settings a[href="#' + href + '"]').tab('show');
+}
 
 function household(href)
 {
