--- a/unexe/templates/sidebar.html
+++ b/unexe/templates/sidebar.html
@@ -2,15 +2,22 @@
 {% load i18n %}
 {% block pagetitle %}{% endblock %}
 {% block sidebar %}
+    <script>
+        var page_view_url = "{% url "user_page_view" %}";
+    </script>
     <div class="col-md-3 leftcol">
         <div class="panel panel-default">
-            <div class="panel-heading"><small><a href="3" onclick="user($(this).attr('href')); return false;" class="pull-right">{% trans "Update" %}</a></small> <div class="panel-title">{% trans "USER" %}</div></div>
+            <div class="panel-heading">
+                <small>
+                    <a href="2" data-toggle="tab" onclick="activateTab('Usettings');" class="pull-right">{% trans "Update" %}</a>
+                </small>
+                <div class="panel-title">{% trans "USER" %}</div></div>
             <div class="panel-body">
-                {% trans "Username" %}: {{user}}<br/>{% trans "Last Login" %}: {{user.last_login}}<br/>{% trans "Password" %}: ******* <small><a href="3" onclick="user($(this).attr('href')); return false;">[{% trans "Change" %}]</a></small>
+                {% trans "Username" %}: {{user}}<br/>{% trans "Last Login" %}: {{user.last_login}}
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading"><small><a href="2" onclick="household($(this).attr('href')); return false;" class="pull-right">{% trans "Update" %}</a></small> <div class="panel-title">{% trans "HOUSEHOLD" %}</div></div>
+            <div class="panel-heading"><small><a href="3" class="pull-right" data-toggle="tab" onclick="activateTab('Hsettings');">{% trans "Update" %}</a></small> <div class="panel-title">{% trans "HOUSEHOLD" %}</div></div>
             <div class="panel-body">
                 <!--
                         <form class="form-inline">
